# tokenizer_leakage_paper

./: README.md  dev_log.md  pyproject.toml
.dvc/: config
tests/: adapters.py  test_data_utils.py  test_lr_schedule.py  test_model.py
tokenizer_leakage/configs/phase1_scale/: OWT_125M.YAML  OWT_30M.YAML  OWT_60M.YAML  integration_test_config.YAML
tokenizer_leakage/data/: .gitignore  tokenized.dvc
tokenizer_leakage/data/raw/: .gitignore  OpenWebText.dvc  TinyStories.dvc
tokenizer_leakage/notebooks/: kaggle-integration-test-tpu-training-code.ipynb
tokenizer_leakage/scripts/: run_scale_experiment.py
tokenizer_leakage/src/: data_utils.py  evaluation.py  model.py  training.py  utils.py
tokenizer_leakage/tokenizer/: README.md
