[project]
name = "Tokenizer-Leakage"
version = "1.0.0"
description = "This repo serves to document my empirical studies on tokenizer data leakage and how it affects training"
readme = "README.md"

dependencies = [
    "einops>=0.8.1",
    "einx>=0.3.0",
    "jaxtyping>=0.3.0",
    "numpy",
    "psutil>=6.1.1",
    "pytest>=8.3.4",
    "regex>=2024.11.6",
    "submitit>=1.5.2",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "dvc",
    # TPU-specific torch and torch_xla versions
    "torch~=2.3.0",
    "torch-xla~=2.3.0"
]


[tool.setuptools.packages.find]
include = ["tokenizer_leakage"]


[tool.uv]
package = true
python-preference = "managed"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"


[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = [
    "F722"
]

[pytest]
norecursedirs = "tokenizer_leakage/data"
